--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8" />
-    <title><%= htmlWebpackPlugin.options.title %></title>
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-  </head>
+    <head>
+        <meta charset="utf-8"/>
+        <title><%= htmlWebpackPlugin.options.title %></title>
+        <meta content="width=device-width, initial-scale=1" name="viewport"/>
+        <link href="./styles.css" rel="stylesheet">
+    </head>
 
-  <body>
-    <div id="app"></div>
-  </body>
+    <body>
+        <div id="app"></div>
+    </body>
 </html>
