--- a/index.html
+++ b/index.html
@@ -1,13 +1,1 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="utf-8"/>
-        <title>Salestrakker Demo App</title>
-        <meta content="width=device-width, initial-scale=1" name="viewport"/>
-        <link href="./styles.css" rel="stylesheet">
-    </head>
-
-    <body>
-        <div id="app"></div>
-    <script src="bundle.js"></script></body>
-</html>
+<!doctype html><html><head><meta charset="utf-8"/><title>Salestrakker Demo App</title><meta content="width=device-width,initial-scale=1" name="viewport"/><link href="./styles.css" rel="stylesheet"></head><body><div id="app"></div><script src="/bundle.js"></script></body></html>
